# autocc

./: .gitignore  .pvsconfig  CMakeLists.txt  ENHANCEMENT_SUMMARY.md  FIX.md  INSTALL_FTXUI.md  README.md  autocc.base.json  autocc.cc  autocc.toml  log.hpp  pvs.sh
include/: SafeInstall.hpp  log.hpp  structs.hpp  utils.hpp
scripts/: autocc_generator.py  autoinstall
test_project/: build_test.sh
test_project/include/: logger.h  utils.h
test_project/src/: extra.cpp  logger.cpp  main.cpp  utils.cpp
zsh/: CMakeLists.txt  README.md  _autocc  autocc.base.json  autocc.cc  autocc.toml  install.sh  uninstall.sh
zsh/include/: httplib.h  json.hpp  log.hpp  toml.hpp  utils.hpp
zsh/zsh/: _autocc
